--- a/CloudDeck/Localizable.xcstrings
+++ b/CloudDeck/Localizable.xcstrings
@@ -22,6 +22,9 @@
     "Assign to me" : {
 
     },
+    "Board" : {
+
+    },
     "Boards" : {
 
     },
@@ -105,6 +108,9 @@
     "Log Out" : {
 
     },
+    "Make a copy instead of moving" : {
+
+    },
     "Mark as done" : {
 
     },
@@ -129,6 +135,9 @@
     "Select" : {
 
     },
+    "Select board and stack" : {
+
+    },
     "Server" : {
 
     },
@@ -136,6 +145,9 @@
       "comment" : "Label for text field."
     },
     "Settings" : {
+
+    },
+    "Stack" : {
 
     },
     "This will remove your account from this device. Your data on the server will not be affected." : {
